--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=test
 
 spring.jpa.open-in-view=false
 
@@ -6,3 +6,11 @@ security.client-id=${CLIENT_ID:myclientid}
 security.client-secret=${CLIENT_SECRET:myclientsecret}
 security.jwt.duration=${JWT_DURATION:86400}
 cors.origins=${CORS_ORIGINS:http://localhost:3000,http://localhost:5173}
+
+
+spring.mail.host=${EMAIL_HOST:smtp.gmail.com}
+spring.mail.port=${EMAIL_PORT:587}
+spring.mail.username=${EMAIL_USERNAME}
+spring.mail.password=${EMAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
