--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ security.client-secret=${CLIENT_SECRET:myclientsecret}
 security.jwt.duration=${JWT_DURATION:86400}
 cors.origins=${CORS_ORIGINS:http://localhost:3000,http://localhost:5173}
 
+email.password-recover.token.minutes=${PASSWORD_RECOVER_TOKEN_MINUTES:30}
+email.password-recover.uri=${PASSWORD_RECOVER_URI:http://localhost:5173/recover-password/}
 
 spring.mail.host=${EMAIL_HOST:smtp.gmail.com}
 spring.mail.port=${EMAIL_PORT:587}
